# odoo

./: pyproject.toml
addons/estate/: __init__.py  __manifest__.py
addons/estate/models/: estate_property.py
