[tool.poetry]
name = "odoo-18 (1)-0"
version = "0.1.0"
description = ""
authors = ["carlomonterrey <carlosmonterrey17@gmail.com>"]
readme = "README.md"
packages = [{include = "odoo_18 (1)"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
